--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,14 @@
   margin-left: 5px;
   margin-top: 10px;
 }
+
+.connect-btn {
+  border-radius: 50%;  
+  height: 15px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.connect-btn:hover {
+  background-color: bisque;
+}
